<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.healthtechhub.rugbyquiz.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question1"
                style="@style/questionStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <EditText
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/answer"
                android:inputType="textCapSentences"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/question2"
                style="@style/questionStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/radioGroupQ2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioBtnEng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/england" />

                <RadioButton
                    android:id="@+id/radioBtnIre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/ireland" />

                <RadioButton
                    android:id="@+id/radioBtnNZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/new_zealand" />

                <RadioButton
                    android:id="@+id/radioBtnSA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="@string/south_africa" />
            </RadioGroup>

            <TextView
                android:id="@+id/question3"
                style="@style/questionStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <CheckBox
                android:id="@+id/checkBoxEng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/england" />

            <CheckBox
                android:id="@+id/checkBoxIre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/ireland" />

            <CheckBox
                android:id="@+id/checkBoxNZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/new_zealand" />

            <CheckBox
                android:id="@+id/checkBoxSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/south_africa" />

            <TextView
                android:id="@+id/question4"
                style="@style/questionStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <RadioGroup
                android:id="@+id/radioGroupQ4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioBtnJean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/jean_de_villiers" />

                <RadioButton
                    android:id="@+id/radioBtnJohn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/john_smit" />

                <RadioButton
                    android:id="@+id/radioBtnRichie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/richie_mccaw" />

                <RadioButton
                    android:id="@+id/radioBtnSiya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="@string/siya_kolisi" />

            </RadioGroup>

            <TextView
                android:id="@+id/question5"
                style="@style/questionStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/RadioGroupQ5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioBtnConv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/conersion" />

                <RadioButton
                    android:id="@+id/radioBtnDrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/drop_goal" />

                <RadioButton
                    android:id="@+id/radioBtnPen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/penalty" />

                <RadioButton
                    android:id="@+id/radioBtnTry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="@string/try_score" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="resetQuiz"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="submitAnswers"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnReset" />

</android.support.constraint.ConstraintLayout>